# catalvst-plugin-builds

./: README.md
.github/workflows/: build-plugin.yml  build-vst3.yml
projects/028eeb58-543a-4300-bea1-789c9b4b8508/: CMakeLists.txt
projects/028eeb58-543a-4300-bea1-789c9b4b8508/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
projects/028eeb58-543a-4300-bea1-789c9b4b8508/Source/ui/: index.html
projects/039be6de-7938-488f-9709-6b3bddbe5271/: CMakeLists.txt
projects/039be6de-7938-488f-9709-6b3bddbe5271/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  effect.dsp
projects/0419f3e2-c821-4a0d-b270-1c4cbb347184/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
projects/0acf73ef-16b5-4083-9d0d-7af1309c28ba/: CMakeLists.txt
projects/0acf73ef-16b5-4083-9d0d-7af1309c28ba/Source/: DrumVoice.h  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
projects/153f9b4e-19c7-410e-a455-07a3b69efe2d/: CMakeLists.txt
projects/153f9b4e-19c7-410e-a455-07a3b69efe2d/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  effect.dsp
projects/1dbc694f-65b0-44d9-acb0-2eb9c0ddd611/: CMakeLists.txt
projects/1e1d9ed0-ae85-40dd-ba81-ba4af8bf068d/: CMakeLists.txt
projects/220f66fe-7ad5-4f19-84eb-16b0667c118f/: CMakeLists.txt
projects/24eede62-9787-4354-a568-e4d9d7aa7d41/: CMakeLists.txt
projects/286be827-9193-451b-9372-28865e3051f9/: CMakeLists.txt
projects/29040ebb-21a2-48c6-baf4-b1065c0795b4/: CMakeLists.txt
projects/337f0f66-35c8-4e24-9a13-0362e58c437c/: CMakeLists.txt
projects/3883cfe8-b7eb-4dd9-ac00-62e35986ea39/: CMakeLists.txt
projects/3abfe9c4-df82-4d39-8bb8-44a4ad80114d/: CMakeLists.txt
projects/3f15415b-c148-4355-96b3-2a6930bba530/: CMakeLists.txt
projects/4470637b-a512-47d9-9fa3-88fa242a38f4/: CMakeLists.txt
projects/460eb9d1-941c-43cc-8d8e-2d0c36de0ed7/: CMakeLists.txt
projects/46540932-1cba-4d53-8b71-23814363cb4e/: CMakeLists.txt
projects/46bf87d5-1f43-41b1-ab26-8f944e03cac9/: CMakeLists.txt
projects/47870f33-cb56-433d-a82f-0ab55d9849f6/: CMakeLists.txt
projects/4a2856b2-0183-4915-abc2-63fc429809ce/: CMakeLists.txt
projects/593e2224-6707-48a5-857f-49377159dea3/: CMakeLists.txt
projects/593e2224-6707-48a5-857f-49377159dea3/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
projects/593e2224-6707-48a5-857f-49377159dea3/Source/ui/: index.html
projects/650f3794-8fb8-4c17-b629-4a92e8fe04b2/: CMakeLists.txt
projects/6556821e-5236-4b42-a6bb-87681ddbb3ba/: CMakeLists.txt
projects/678b7927-d6a6-4c3f-bafd-1c2b704a684d/: CMakeLists.txt
projects/6ac47bef-ffe2-41e4-a993-5b7c4c23e7fc/: CMakeLists.txt
projects/6c000586-fe44-42fd-aa44-9be07cb9206d/: CMakeLists.txt
projects/75162514-879d-481b-a748-1a6640549a4c/: CMakeLists.txt
projects/7e8a9d0c-90c0-4817-abfe-3aae72ccf08d/: CMakeLists.txt
projects/804f4dcc-7069-44d3-9e2d-a7b595860e1d/: CMakeLists.txt
projects/87925134-ba3c-4652-8953-78886a6892d4/: CMakeLists.txt
projects/881014ab-7bad-467e-b5ae-8a4fb75fae18/: CMakeLists.txt
projects/88d99a8e-8383-4e73-b909-92911a040f1d/: CMakeLists.txt
projects/89bd290a-b455-4a6d-87d2-7132779c92a7/: CMakeLists.txt
projects/8b9f2bb2-90ed-4f0e-8dfd-591dcf8dd2af/: CMakeLists.txt
projects/8dcda653-544c-4063-8af4-1765a52c8c4f/: CMakeLists.txt
projects/936fdbab-441f-49d3-85eb-ec84b86562f2/: CMakeLists.txt
projects/98499b67-5b32-4c54-b281-668e4afd9aef/: CMakeLists.txt
projects/98499b67-5b32-4c54-b281-668e4afd9aef/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
projects/98499b67-5b32-4c54-b281-668e4afd9aef/Source/ui/: index.html
projects/98499b67-5b32-4c54-b281-668e4afd9aef/Source/ui/js/juce/: check_native_interop.js  index.js
projects/9b412ea1-1e48-450e-94f5-22a28be4fc4b/: CMakeLists.txt
projects/9cd0c2fb-93c8-4911-adaa-3dec25ecb481/: CMakeLists.txt
projects/9dae3450-d0e2-4f09-946e-d4bc21de2fa5/: CMakeLists.txt
projects/9f36de1a-9d5a-40f1-a97f-172273fa8747/: CMakeLists.txt
projects/9f4f164b-d892-4e11-84c0-d2a645f984f3/: CMakeLists.txt
projects/9f4f164b-d892-4e11-84c0-d2a645f984f3/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
projects/9f4f164b-d892-4e11-84c0-d2a645f984f3/Source/ui/: index.html
projects/9fe608f5-b165-4a84-acc2-bba22a78e6c9/: CMakeLists.txt
projects/a9dc14e9-eaf2-4b78-aac3-950c1c2fce85/: CMakeLists.txt
projects/b5878bc6-838e-443e-bf7b-862c5ceecde0/: CMakeLists.txt
projects/b6305ce8-9da9-4bd3-8a3d-0d3fea875e88/: CMakeLists.txt
projects/b646b2cf-3343-4f79-88e2-88bce4ca81f5/: CMakeLists.txt
projects/ba703abf-f20f-45f3-bb56-a41e7abfa8d3/: CMakeLists.txt
projects/baa4cddf-2ed4-4ae2-abca-5d42c1158d87/: CMakeLists.txt
projects/baa4cddf-2ed4-4ae2-abca-5d42c1158d87/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
projects/baa4cddf-2ed4-4ae2-abca-5d42c1158d87/Source/ui/: index.html
projects/be1d2edb-db13-4572-b3a9-b06b2f186ad3/: CMakeLists.txt
projects/c41cdaf7-602c-40cf-ae37-0d52e1c89a54/: CMakeLists.txt
projects/c6d3420e-0a69-4a7f-b515-23d014454ce5/: CMakeLists.txt
projects/c6d3420e-0a69-4a7f-b515-23d014454ce5/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
projects/c6d3420e-0a69-4a7f-b515-23d014454ce5/Source/ui/: index.html
projects/cd214431-3b35-44e4-a3f4-f59582198e56/: CMakeLists.txt
projects/ce02fb58-bb64-42c4-8335-4fba977ceaa8/: CMakeLists.txt
projects/dcfa3279-6b83-42f3-b9a3-c25e9f24fead/: CMakeLists.txt
projects/e088a622-70b3-4f99-b388-511858536eee/: CMakeLists.txt
projects/e510aa39-9b6b-4434-ad49-87443d0a6026/: CMakeLists.txt
projects/e71986b3-e41f-45d5-b8b2-3bf3b43a2a5c/: CMakeLists.txt
projects/e94b80b3-c598-4a5b-a93e-cd2a3d290de1/: CMakeLists.txt
projects/f92b82e5-8ef2-4e71-9643-56f711ac3838/: CMakeLists.txt
scaffold/: CMakeLists.txt.in  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  faustMinimal.h
(+341 files in other folders)
